# swagger-rustgen

./: Cargo.toml
src/: codegen.rs  definitions.rs  items.rs  lib.rs  main.rs  name.rs  operation.rs  path.rs  responses.rs  schema.rs  types.rs
src/v2/: codegen.rs  definitions.rs  items.rs  mod.rs  operation.rs  parameter.rs  path.rs  responses.rs  schema.rs  types.rs
src/v2/codegen/: mod.rs  prototyper.rs
src/v2/codegen/backend/: mod.rs  rust.rs
src/v2/codegen/backend/python/: backend.rs  mod.rs  types.rs
src/v2/codegen/backend/rust/: backend.rs  mod.rs  types.rs
