[package]
name = "swagger-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "swagger-gen"

[dependencies]
serde_yaml = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
convert_case = "0.5"
clap = { version = "4", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
